--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "vaul": "^0.2.3",
     "zustand": "^4.4.0"
   }
 }
