--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "lucide-react": "^0.263.1",
+    "nanoid": "^4.0.2",
     "next": "13.4.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
