--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "encoding": "^0.1.13",
@@ -31,16 +32,15 @@
     "next": "13.4.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
-    "pusher": "^5.1.3",
-    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
-    "vaul": "^0.2.3",
+    "vaul": "^0.4.1",
     "zustand": "^4.4.0"
   }
 }
