--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
+    "rimraf": "^5.0.1",
     "typescript": "^5.2.2"
   }
 }
