--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
